Handle output when Valgrind must halt due to limited memory.
When Valgrind must stop execution due to limited memory, we can still
parse the output and display a message to inform the user. BZ #360225.

--- a/valgrind/org.eclipse.linuxtools.valgrind.core/ChangeLog
+++ b/valgrind/org.eclipse.linuxtools.valgrind.core/ChangeLog
@@ -1,3 +1,8 @@
+2011-10-07  Roland Grunberg  <rgrunber@redhat.com>
+
+	* src/org/eclipse/linuxtools/internal/valgrind/core/ValgrindCoreParser.java
+		(ValgrindCoreParser): Handle output resulting from insufficient memory. BZ# 360225.
+
 2011-01-06  Elliott Baron  <ebaron@fedoraproject.org>
 
 	Bug #333640
