--- a/autotools/org.eclipse.linuxtools.cdt.autotools.ui/ChangeLog
+++ b/autotools/org.eclipse.linuxtools.cdt.autotools.ui/ChangeLog
@@ -1,3 +1,11 @@
+2011-10-07  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* META-INF/MANIFEST.MF: Add org.eclipse.linuxtools.profiling.launch as dependency.
+	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/editors/automake/OpenIncludeAction.java (findFile): Update to
+	use new IRemoteFileProxy interface.
+	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/actions/InvokeAction.java (ExecuteProgressDialog.run): Update
+	to use new IRemoteCommandLauncher interface.
+
 2011-09-08  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* src/org/eclipse/linuxtools/internal/cdt/autotools/ui/editors/automake/Target.java: Remote exits and
